--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# Ignore this filename for safety
+private_key.pem
+
 /app/assets/builds/*
 !/app/assets/builds/.keep
 
